# openSSM

./: .gitignore  CMakeLists.txt  CREDITS  Makefile  README.txt  main.c
config/: signals.conf
include/: config.h  log.h  measure.h  ssm.h
include/src/: config.h  dump.h  error.h  log.h  measure.h  ssm.h
include/ui/: config_ui.h  helper_ui.h  main_ui.h  measure_ui.h  plot.h
src/: 4wsdump.c  CMakeLists.txt  checktcu.c  config.c  dump.c  ecudump.c  ecuscan.c  log.c  mapextract.c  measure.c  ssm.c
src/archive/: checkecu.c  ecuscan.c  tcudump.c  tcuscan.c
tests/: CMakeLists.txt  test_ssm.c
ui/: CMakeLists.txt  config_ui.c  helper_ui.c  main_ui.c  measure_ui.c  plot.c
